fixed error with styling that caused overflow when items with long names were added to cart

--- a/public/style.css
+++ b/public/style.css
@@ -516,7 +516,7 @@ label {
     justify-content: space-around;
     align-items: center;
     flex-grow: 2;
-    flex-basis: 2;
+    flex-basis: 800px;
 }
 
 footer,
